     bug #6570)
   * haloes in tiny gui are now scaled (before unscaled, thus a factor 2 bigger
     as intended)
   * the movement text is also scaled now (bug #6876, patch patch #693)
   * fix glitches when scrolling the map if zoomed out (bug #8768)
   * fix the right border glitch of the map when zooming (bug #6060 and others)
   * scenery
     * added animated windmill, fancy and damaged tents, icepack, and shipwreck
 * language and i18n:
   * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
     Greek, Hungarian, Italian, Norwegian, Portuguese (Brazil), Spanish, Swedish
   * new translations: Indonesian
 * multiplayer:
   * revised maps: Castle Hopping Isle
   * The countdown timer is now coloured properly when the remaining time is
     less than 2 minutes.
 * units:
    * balancing changes:
      * converted the cold resistance of the Elvish Sorceress line to a holy
        resistance
      * decreased the holy resistance of the Orcish Assassin line from 20% to 0%
      * decreased the holy resistance of the Sky Drake from 20% to -30%
      * decreased the holy resistance of the Hurricane Drake from 20% to -30%
      * decreased the holy resistance of the Mermaid Priestess from 40% to 20%
      * decreased the holy resistance of the Mermaid Diviner from 60% to 40%
      * decreased the holy resistance of the Dwarves from 20% to 10%
      * increased the holy resistance of the Ghost line from -60% to -30%
      * enabled Lich and Ancient Lich to go on deep water and gave them submerge
 * terrain system
   * added layer support to the terrain letters, two layers are supported
 * WML engine
   * new [own_village] condition to check if someone own a particular village
   * new [store_villages] tag to store village locations
   * all [store_*] tags get a default variable name
   * use complex variable substitution almost everywhere
   * new key for [set_variable], literal=, to avoid variable substitution
   * [effect] can now toggle the zoc